test: 식단 서비스 계층 테스트 보강